feat: impact header

--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fAIshion</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script
+
+<head>
+  <meta charset="UTF-8" />
+  <link
+    rel="icon"
+    type="image/svg+xml"
+    href="/logo.png"
+  />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  />
+  <meta
+    name='impact-site-verification'
+    value='6c2e0eac-beb2-4a13-b2d7-392815663cd1'
+  />
+  <title>fAIshion</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script
     type="module"
     src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
   ></script>
@@ -16,6 +29,10 @@
     nomodule
     src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
   ></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <script
+    type="module"
+    src="/src/main.tsx"
+  ></script>
+</body>
+
 </html>
