--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link
     rel="icon"
-    type="image/svg+xml"
+    type="image/png"
     href="/logo.png"
   />
   <meta
